force-app/main/default/objects/Vyuha_Schedule_Item__c/Vyuha_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Contains scheduled items for Vyuha which controls how the hourly scheduler interacts with executing Formations</description>
    <label>Vyuha Schedule Item</label>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Vyuha Schedule Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vyuha Schedule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>