force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Indicates if Schedule Item is active - inherited from parent Formation</description>
    <formula>Vyuha_Formation__r.Active__c</formula>
    <inlineHelpText>Indicates if Schedule Item is active - inherited from parent Formation</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>