force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for scheduled formation</description>
    <inlineHelpText>End date for scheduled formation</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>