force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Formation_Status__c.field-meta.xml
<CustomField>
    <fullName>Formation_Status__c</fullName>
    <description>Parent Formation Status</description>
    <formula>Vyuha_Formation__r.Status__c</formula>
    <inlineHelpText>Parent Formation Status</inlineHelpText>
    <label>Formation Status</label>
    <type>Text</type>
</CustomField>