force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Select the Frequency for Formation execution.  One Time will run on a specified date/time, Weekly will run recurring based on the date/time selected</description>
    <inlineHelpText>Select the Frequency for Formation execution.  One Time will run on a specified date/time, Weekly will run recurring based on the date/time selected</inlineHelpText>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>