force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Last_Error_Encountered__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Encountered__c</fullName>
    <description>Date/Time of last error encountered</description>
    <inlineHelpText>Date/Time of last error encountered</inlineHelpText>
    <label>Last Error Encountered</label>
    <type>DateTime</type>
</CustomField>