force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Last_Successful_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Run__c</fullName>
    <description>Date/Time of most recent successful run</description>
    <inlineHelpText>Date/Time of most recent successful run</inlineHelpText>
    <label>Last Successful Run</label>
    <type>DateTime</type>
</CustomField>