force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/One_Time_Datetime__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Datetime__c</fullName>
    <description>Date/Time for single run</description>
    <inlineHelpText>Date/Time for single run</inlineHelpText>
    <label>Run Date Time</label>
    <type>DateTime</type>
</CustomField>