force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <description>Preferred Start Time for scheduled formation - note: job may not run at this exact time depending on system load</description>
    <inlineHelpText>Preferred Start Time for scheduled formation - note: job may not run at this exact time depending on system load</inlineHelpText>
    <label>Preferred Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>