force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Friday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Friday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Friday</inlineHelpText>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>