force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Monday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Monday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Monday</inlineHelpText>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>