force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Saturday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Saturday</inlineHelpText>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>