force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Sunday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Sunday</inlineHelpText>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>