force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Thursday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Thursday</inlineHelpText>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>