force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Tuesday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Tuesday</inlineHelpText>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>