force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Recurring_Day_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Day_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formation scheduled for recurring runs on Wednesday</description>
    <inlineHelpText>Formation scheduled for recurring runs on Wednesday</inlineHelpText>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>