force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date for Scheduled Formation</description>
    <inlineHelpText>Start Date for Scheduled Formation</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>