force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Schedule Item Status</description>
    <inlineHelpText>Schedule Item Status</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>