force-app/main/default/objects/Vyuha_Schedule_Item__c/fields/Vyuha_Formation__c.field-meta.xml
<CustomField>
    <fullName>Vyuha_Formation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Vyuha Formation for Scheduled Item</description>
    <inlineHelpText>Related Vyuha Formation for Scheduled Item</inlineHelpText>
    <label>Vyuha Formation</label>
    <referenceTo>Vyuha_Formation__c</referenceTo>
    <relationshipLabel>Vyuha Schedule Items</relationshipLabel>
    <relationshipName>Vyuha_Schedule_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>